2006-01-16  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* matrix.[ch]xx: added new method resize() to resize
	matrix without boost's resize call.  boost 1.30.2 doesn't 
	preserve element values when resizing.
	
	* lpbuilder.[ch]xx: added new method to set initial 
	constraint matrix size.
	
	* source/ui/solvemodel.cxx: call to set initial 
	constraint matrix size.
	
	* source/ui/xcalc.cxx (getCellRangeAddress): set #ifdef
	DEBUG block.


2006-01-13  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/matrix.cxx: reimplemented boost's
	string::replace_first() function with std::string
	methods only.


2006-01-11  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/*.cxx: replaced all occurrences of
	matrix's get/setValue calls with operator().

	* source/inc/matrix.hxx: removed get/setValue public 
	methods due to redundancy.
	
	* source/numeric/matrix.cxx: fixed return type of 
	MatrixImpl::getValue() to avoid returning reference
	to temporary.


2006-01-09  Michael Meeks  <michael.meeks@novell.com>

	* source/service/*.xcu: remove - obsolete.

	* source/ui/solver.cxx: remove, now
	source/service/service.cxx.

	* source/numeric/matrix.cxx: re-work boost / stl bits
	a little.

	* */makefile.mk: add build bits.

	* *.cxx: s/assert/OSL_ASSERT/g

	* service.cxx: switch to XExecutableDialog instead of
	more complex custom XSolver interface.
