@@ -1,3 +1,9 @@
+2006-01-28  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* workben/addon_pkg: added new directory and files
+	underneath it for building a separate scsolver package.
+
+
 2006-01-16  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* matrix.[ch]xx: added new method resize() to resize
